fixes alignment of navbar items by removing row and col classes and amending h1 element margin and font size

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,8 +11,9 @@ footer {
 }
 
 h1 {
-    font-size: 200%;
+    font-size: 180%;
     font-weight: 5;
+    margin-right: 12%;
 }
 
 .font-one {
